src/test/input/codegen/fail/params2.c
// Function parameters not matching

int a(int x, int y) {
    return x + y;
}

void main() {


    a(5,4,3);

}